vm/src/snapshots/stak_vm__memory__tests__garbage_collection__collect_cons.snap
---
source: vm/src/memory.rs
expression: memory
---
program counter: !:0
stack: !:0
100: c102:0 c102:0
102: n0 n0
