vm/src/snapshots/stak_vm__memory__tests__garbage_collection__collect_cycle.snap
---
source: vm/src/memory.rs
expression: memory
---
code: c100
stack: c100
100: n0 n0 <- code <- register <- stack
102: c100 c100
