vm/src/snapshots/stak_vm__memory__tests__garbage_collection__collect_deep_stack.snap
---
source: vm/src/memory.rs
expression: memory
---
code: c100
stack: c102
100: n0 n0 <- code <- register
102: n2 c106 <- stack
104: c100 c100
106: n1 c100
